--- a/TBF.CommonLib/TBC.CommonLib.csproj
+++ b/TBF.CommonLib/TBC.CommonLib.csproj
@@ -12,6 +12,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Jaffoo/TBC.CommonLib</RepositoryUrl>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
