--- a/TBF.CommonLib/TBC.CommonLib.csproj
+++ b/TBF.CommonLib/TBC.CommonLib.csproj
@@ -12,7 +12,8 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Jaffoo/TBC.CommonLib</RepositoryUrl>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-    <Version>1.1.1</Version>
+    <Version>1.1.2</Version>
+    <PackageReleaseNotes>修复网络请求工具每次发送都是新的实例</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
