--- a/TBC.CommonLib.Test/TBC.CommonLib.Test.csproj
+++ b/TBC.CommonLib.Test/TBC.CommonLib.Test.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TBC.CommonLib\TBC.CommonLib.csproj" />
+  </ItemGroup>
+
 </Project>
